--- a/_posts/2023-06-12-2023-chris-hammond.md
+++ b/_posts/2023-06-12-2023-chris-hammond.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The Intersection of Tech and Community: Chris Hammond's Journey
+title: "The Intersection of Tech and Community: Chris Hammond's Journey"
 date: '2023-06-12T10:00:20+00:00'
 permalink: chris-hammond
 description: Chris Hammond
@@ -9,4 +9,5 @@ image: chrishammond.jpg
 categories:
 featured: true
 ---
+## A little about the owner here:
 Balancing professional pursuits with community involvement isn't easy, but [Chris Hammond](https://www.chrishammond.com/) seems to have found the sweet spot. Based in St. Louis, MO, Chris has made significant contributions to his local community, all while advancing his career in the tech industry. Find out more about Chris' inspiring journey on his personal blog, [ChrisHammond.com](https://www.chrishammond.com/).
